--- a/vignettes/activePathways-vignette.Rmd
+++ b/vignettes/activePathways-vignette.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "ActivePathways"
-author: "Jonathan Barenboim"
+author: "Jonathan Barenboim, Marta Paczkowska, Helen Zhu & Jüri Reimand"
 date: "`r Sys.Date()`"
 output: 
   rmarkdown::html_vignette:
-    toc: false
+    toc: true
 vignette: >
   %\VignetteIndexEntry{ActivePathways}
   %\VignetteEngine{knitr::rmarkdown}
@@ -18,33 +18,36 @@ options(max.print=35)
 ```
 
 # Introduction
-ActivePathways is a tool for multivariate pathway enrichment analysis. Pathway enrichment analysis identifies pathways, such as Gene Ontology terms, that are over-represented in a list of genes of interest. ActivePathways implements an algorithm to perform pathway enrichment analysis on a data set that contains multiple variables for each gene. For example, the data may contain the confidence that the gene is a driver as reported by several tools, or it may contain evidence from differential expression analysis across tissues.
+ActivePathways is a statistical method and software tool for pathway enrichment analysis across multiple *omics* datasets. Different *omics* techniques and analyses reveal different facets of underlying biology and such integrative analysis across multivariate data helps find their commonalities in the context of pathways, biological processes and functionally related gene sets. ActivePathways uses a data fusion technique to merge multiple gene lists with p-values into an integrated gene list and conducts enrichment analysis using the ranked hypergeometric statistic.
 
-## Pathway Enrichment and The Ordered Hypergeometric Algorithm
+## Pathway Enrichment and the Ordered Hypergeometric Algorithm
 
-From a matrix of p-values, `ActivePathways` creates a gene list query by merging the p-values to determine a single p-value for each gene, then filtering and sorting this list of p-values. This creates a list of genes ordered by statistical significance. `ActivePathways` tests if a pathway is 'enriched', or over-represented in our gene list, by performing a hypergeometric test on the gene list and the genes annotated to the pathway. However, rather than testing the entire gene list, `ActivePathways` performs incremental enrichment analysis with an increasingly larger subset of the gene list starting at the top of the list, and identifies the subset of gene list that yields the smallest p-value. This approach is useful when the genes in the gene list are of varying biological importance as it identifies the genes most relevant to the enrichment of the pathway.
+From a matrix of p-values representing genes and their significance in different *omics* datasets, ActivePathways creates an integrated gene list (i.e., a query) by merging the p-values to determine a single p-value for each gene. The integrated gene list is then filtered and sorted by merged p-values. ActivePathways tests if a pathway is ‘enriched’, or over-represented in our gene list, by performing a hypergeometric test on the gene list and the genes annotated to the pathway. However, rather than testing the entire gene list, ActivePathways performs incremental enrichment analysis with an increasingly larger subset of the gene list starting at the top of the list and identifies the subset of gene list that yields the smallest p-value (known as the ranked hypergeometric statistic). This approach is useful when the genes in the gene list are of decreasing biological importance. The ranked test is more sensitive than a single test of a regular “flat” gene list as it finds smaller and more specific pathways of genes ranked at the top of the list, as well as larger and more general pathways distributed across the entire input list.
 
 # Tutorial
-The following example uses a dataset which contains a small subset of driver genes in a cohort of adenocarcinomas. The driver scores are p-values which represent the confidence that a given gene is a driver. Driver scores are given separately for different genetic elements: untranslated regions, coding regions, and promoters. The GMT file, representing a set of pathways, are a small subset of the pathways curated by the Reactome database [Gene Matrix Transposed](https://software.broadinstitute.org/cancer/software/gsea/wiki/index.php/Data_formats#GMT:_Gene_Matrix_Transposed_file_format_.28.2A.gmt.29) file. Broadly, GMT files can be downloaded from the [g:ProfileR server](https://biit.cs.ut.ee/gprofiler/gost). Click on Data sources, select database preferences and download the `name.gmt` file.
+The following example uses a dataset that contains a small subset of driver genes in a cohort of adenocarcinomas of multiple cancer types. The driver scores are p-values which represent the confidence that a given gene is a driver. Driver scores are provided separately for different genetic elements: untranslated regions (5' and 3' UTRs), coding regions, and promoters. 
 
-![](gmt_download.jpg)
+## Providing a GMT File
+The GMT file, representing a set of molecular pathways, are a small subset of the pathways curated by the Reactome database [Gene Matrix Transposed](https://software.broadinstitute.org/cancer/software/gsea/wiki/index.php/Data_formats#GMT:_Gene_Matrix_Transposed_file_format_.28.2A.gmt.29) file. Broadly, GMT files can be downloaded from the [Bader Lab repository](http://baderlab.org/GeneSets), [the MSigDB database hosted at the Broad Institute](http://software.broadinstitute.org/gsea/msigdb) or the [g:ProfileR web server](https://biit.cs.ut.ee/gprofiler/gost). Click on 'Data sources', select database preferences and download the `name.gmt` file. Note that the gene IDs or symbols in the GMT file need to match the IDs or symbols used in the gene matrix.
 
-Let's start off by reading the data from the file. `ActivePathways` expects a matrix so the table has to be cast to the correct class.
+![Downloading GMT Files from gProfileR](gmt_download.jpg)
+
+## Providing a P-value Matrix
+Let's start by reading the input data from the file. `ActivePathways` expects a matrix, so the table has to be cast to the correct class.
 ```{r}
 scores <- read.table(system.file('extdata', 'Adenocarcinoma_scores_subset.tsv', package='ActivePathways'), header=TRUE, sep='\t', row.names='Gene')
 scores <- as.matrix(scores)
 scores
 ```
 
-Additionally, `ActivePathways` will not allow any missing values. Rows containing missing values may be removed. Alternatively, as conducted in this example, missing values will be assigned a value of 1, indicating that the element is not a driver.
+Additionally, `ActivePathways` will not allow any missing values (NA) in the input. Rows containing missing values may be removed. Alternatively, as conducted in this example, missing values will be assigned a value of 1, indicating that the element is not a driver.
 
 ```{r}
 scores[is.na(scores)] <- 1
 ```
 
-
 ## Basic Use
-The `ActivePathways` function requires two inputs.The first is the data matrix of p-values. The second is the path to the GMT file.
+The `ActivePathways` function requires two inputs. The first is the data matrix of p-values. The second is the path to the GMT file.
 
 ```{r}
 library(ActivePathways)
@@ -53,7 +56,7 @@ ActivePathways(scores, gmt.file)
 ```
 
 ## Significance Threshold and Returning All Results
-A pathway is considered to be significantly enriched if the associated p-value is less than the significance threshold (i.e. `p.val <= significant`). The `significant` parameter represents the maximum p-value for a result to be considered statistically significant. By default, only the significant pathways are returned. If all results are desired, the user can set the `return.all` parameter to `TRUE`.
+A pathway is considered to be significantly enriched if the associated p-value is less than the significance threshold (i.e. `p.val <= significant`). The `significant` parameter represents the maximum p-value for a result to be considered statistically significant after multiple testing correction. By default, only the significant pathways are returned. If all results are desired, the user can set the `return.all` parameter to `TRUE`. ActivePathways conducts multiple testing correction by default using the [Holm method](https://www.jstor.org/stable/4615733?seq=1#page_scan_tab_contents).
 
 ```{r}
 nrow(ActivePathways(scores, gmt.file, return.all=FALSE, significant=0.05))
@@ -62,8 +65,8 @@ nrow(ActivePathways(scores, gmt.file, return.all=TRUE, significant=0.05))
 ```
 Note that while setting `significant=1` gives the same result as `return.all=TRUE`, it is strongly recommended the latter is used because the results written to `cytoscape.file.dir` use the `significant` value to determine which pathways to include in the network. Thus `ActivePathways(scores, gmt.file, return.all=TRUE, cytoscape.file.dir='/results/directory/')` and `ActivePathways(scores, gmt.file, significant=1, cytoscape.file.dir='/results/directory/)` will return the same result table but will write different results files.
 
-## GMT objects
-While the location of the GMT file to `ActivePathways` can be directly specified, in some cases the user may desire to examine the GMT file interactively. The ActivePathways package includes an interface for working with GMT objects. The GMT file can be read into R as a GMT object with the `read.GMT` function. The GMT is structured as a list of terms, where each term is a list containing an id, a name, and a list of genes.
+## Examining GMT Objects
+The GMT file contains the pathways to be analyzed for gene enrichment. Each line corresponds to a pathway and contains the pathway ID and name followed by all associated genes. While the location of the GMT file to `ActivePathways` can be directly specified, in some cases the user may desire to examine the GMT file interactively. The ActivePathways package includes an interface for working with GMT objects. The GMT file can be read into R as a GMT object with the `read.GMT` function. The GMT is structured as a list of terms, where each term is a list containing an id, a name, and a list of genes.
 
 ```{r}
 gmt <- read.GMT(gmt.file)
@@ -79,7 +82,7 @@ gmt[[1]]$genes
 gmt$`REAC:2424491`$name
 ```
 
-GMT files can be filtered for size to remove large and small pathways which are overly generic or specific. Here, pathways that have less than 10 or more than 500 genes are removed.
+GMT files can be filtered for size to remove large and small pathways which are overly generic or specific. Here, pathways that have less than 10 or more than 500 genes are removed. This step removes very small and specific gene sets that often represent a large fraction of all pathways, and large and unspecific gene sets that are subject to p-value inflation due to the properties of the hypergeometric distribution. Both very small and very large gene sets are often not helpful for data interpretation and can be safely discarded in most cases.
 
 ```{r}
 gmt <- Filter(function(term) length(term$genes) >= 10, gmt)
@@ -91,15 +94,15 @@ This GMT object can be written to a file.
 write.GMT(gmt, 'hsapiens_REAC_subset_filtered.gmt')
 ```
 
-This filtering can also be done automatically using the `geneset.filter` parameter in the `ActivePathways` function by specifying a vector of length 2 containing the minimum and maximum pathway size desired by the user. For example, the above task can be completed by setting `geneset.filter=c(10, 500)`. By default `ActivePathways` removes any pathways with less than 5 or more than 1000 annotated genes.
+This filtering can also be done automatically using the `geneset.filter` parameter in the `ActivePathways` function by specifying a vector of length 2 containing the minimum and maximum pathway size desired by the user. For example, the above task can be completed by setting `geneset.filter=c(10, 500)`. By default, `ActivePathways` removes any pathways with less than 5 or more than 1000 annotated genes. 
 
 The new GMT object can now be used for analysis with `ActivePathways`.
 ```{r}
 ActivePathways(scores, gmt)
 ```
 
-## Backgrounds
-To perform pathway enrichment analysis, `ActivePathways` uses a set of genes as a statistical background. By default, the `background` is every gene found at least once in the GMT, but it can also be specified by the user by supplying a vector of genes to the  `background` parameter in `ActivePathways`. For example, if the analysis is conducted on a set of genes captured by a panel, then the user may wish to limit the `background` to the genes whose characteristics can be measured. 
+## Statistical Background Gene Set
+To perform pathway enrichment analysis, `ActivePathways` uses a set of genes as a statistical background. By default, the `background` is every gene found at least once in the GMT, but it can also be specified by the user by supplying a vector of genes to the  `background` parameter in `ActivePathways`. For example, if the analysis is conducted on a set of genes captured by a sequencing panel, then the user may wish to limit the `background` to the genes whose characteristics can be measured. Genes that have no plausible signal in an experiment or analysis of interest should not be part of a statistical background as their inclusion in an analysis would lead to statistical inflation. 
 
 The list of genes in the GMT can be extracted with the `makeBackground` function (automatically performed by `ActivePathways`). In this example, let's try excluding the gene *TP53*. This gene can be removed from the background and the new background can be used for the analysis.
 
@@ -110,8 +113,8 @@ ActivePathways(scores, gmt.file, background=background)
 ```
 Note that only genes found in the background are used for testing enrichment. Any genes in the input data that are not in the background will be automatically removed by `ActivePathways`.
 
-## Merging p-values
-`ActivePathways` integrates evidence from each source of evidence by merging the p-values for each gene into a single combined score. The two main methods to merge p-values are Brown's method (the default, which assumes correlation between difference sources of evidence) and Fisher's method (which assumes independence), but other methods are also available. 
+## Merging P-values
+`ActivePathways` statistically merges evidence from each source (e.e., *omics* dataset or analysis) by merging the p-values for each gene into a single combined score. The two main methods to merge p-values are Brown's method (the default, which assumes a correlation between different sources of evidence) and Fisher's method (which assumes independence of different sources of evidence), but other methods are also available.
 
 ```{r}
 scores
@@ -119,34 +122,37 @@ merge_p_values(scores, 'Fisher')
 merge_p_values(scores, 'Brown')
 ```
 
-The user can independently calculate merged p-values using the `merge_p_values` function. For example, the `X3UTR`, `X5UTR`, and `promCore` columns can be merged into a single `non_coding` column. This will consider the three non-coding regions as a single column, rather than giving them all equal weight as the `CDS` column.
+The user can directly calculate merged p-values using the `merge_p_values` function. For example, the `X3UTR`, `X5UTR`, and `promCore` columns can be merged into a single `non_coding` column. This will consider the three non-coding regions as a single column, rather than giving them all equal weight as the `CDS` column.
 
 ```{r}
 scores2 <- cbind(scores[, 'CDS'], merge_p_values(scores[, c('X3UTR', 'X5UTR', 'promCore')], 'Brown'))
 colnames(scores2) <- c('CDS', 'non_coding')
-scores
-scores2
 
-ActivePathways(scores, gmt.file)
-ActivePathways(scores2, gmt.file)
+scores # with separate columns for 3' UTR, 5'UTR & Promoter
+
+scores2 # with a single 'noncoding' column for the merged p-value of 3' UTR, 5'UTR & Promoter
+
+ActivePathways(scores, gmt.file) # results on the dataset with separate columns for 3' UTR, 5'UTR & Promoter
+
+ActivePathways(scores2, gmt.file) # results on the dataset with a single 'noncoding' column for the merged p-value of 3' UTR, 5'UTR & Promoter, reducing the impact of noncoding mutations
 ```
 
-## Cutoff
+## Gene Cutoff for Considering in Pathway Enrichment Analysis
 In addition to removing any genes not found in the background, `ActivePathways` also removes any genes that have a p-value higher than the `cutoff` parameter after merging the scores. This threshold represents the maximum p-value for a gene to be considered of interest in our analysis. The `cutoff` is `0.1` by default.
 
-## P-value Adjustment
+## P-value Adjustment for Pathway Enrichment Analysis
 To avoid inflated p-values that arise from multiple testing, p-values are adjusted after running enrichment analysis on each pathway. `ActivePathways` uses the base R `p.adjust` function to adjust p-values. Thus, all statistical methods performed by `p.adjust` can be used in `ActivePathways` by altering the `correction.method` parameter. By default, the `holm` correction method is used. Setting `correction.method='none'` will instruct the software to avoid p-value adjustment.
 
 # The Results Table
 
-Here are the results from the basic case.
+Here are the results from a basic ActivePathways analysis.
 
 ```{r}
 res <- ActivePathways(scores, gmt.file)
 res
 ```
 
-The `term.id`, `term.name`, and `term.size` column give the identifier, name and number of genes in each pathway or pathway. The `adjusted.p.val` column gives the adjusted p-value for each pathway indicating the confidence that the pathway is enriched. If the `return.all` option is `FALSE`, all of these p-values will be smaller than the significance threshold, 0.05, and the table contains only the pathways that were found to be significantly enriched. 
+The `term.id`, `term.name`, and `term.size` columns give the identifier, name and number of genes in each pathway. The `adjusted.p.val` column gives the adjusted p-value for each pathway indicating the confidence that the pathway is enriched. If the `return.all` option is `FALSE`, all of these p-values will be smaller than the significance threshold, 0.05, and the table contains only the pathways that were found to be significantly enriched. 
 
 The `overlap` column gives the intersection between the genes annotated to the term and the subset of genes in the merged gene list that returned this p-value.
 
@@ -156,16 +162,17 @@ res$overlap[1:3]
 
 The overlaps are in the same order as the merged gene list, meaning that more significant genes from `scores` are ranked higher, allowing the user to return to the gene space and identify significant genes in each pathway.
 
-The `evidence` column gives the names of columns (sources of evidence) in `scores` in which a given pathway is found to be enriched. For example, the majority of the pathways in this example have 'CDS' as the only evidence, meaning that the pathway is enriched in this column (and in the combined data). Pathway `REAC:422475` has as evidence `list('X3UTR', 'promCore')`, which means that the pathway is found to be enriched when considering the `X3UTR` column, the `promCore` column, and the combined data. If a pathway is found to be enriched only in the combined data and not in any individual column, 'combined' will be listed as the evidence. If a pathway is not found to be enriched in any individual column or in the combined data (only possible if `return.all==TRUE`), then the evidence will be 'none'.  
+The `evidence` column gives the names of columns (sources of evidence such as *omics* datasets) in `scores` in which a given pathway is found to be enriched. For example, the majority of the pathways in this example have 'CDS' as the only evidence, meaning that the pathway is enriched in this column (and in the combined data). Pathway `REAC:422475` has as evidence `list('X3UTR', 'promCore')`, which means that the pathway is found to be enriched when considering the `X3UTR` column, the `promCore` column, and the combined data. If a pathway is found to be enriched only in the combined data and not in any individual column, 'combined' will be listed as the evidence. If a pathway is not found to be enriched in any individual column or in the combined data (only possible if `return.all==TRUE`), then the evidence will be 'none'.  
 
-The rest of the columns are named as `Genes_{column}`, and represent the gene overlaps of each individual column if a pathway is found to be enriched using the p-values from that column. Otherwise the column is `NA`.
+The rest of the columns are named as `Genes_{column}`, and represent the gene overlaps of each individual column if a pathway is found to be enriched using the p-values from that column. Otherwise, the column is `NA`.
 
-### Writing results to file
-The results are returned as a `data.table`, but since the overlap column is a list, it can be a challenge to write the table to a file. The usual `write.table` and `write.csv` functions will struggle with this column unless the user manually transforms the list into a string. Fortunately, `data.table`'s `fwrite` function is smart enough to handle the complex structure.
+### Writing Results to File
+The results are returned as a `data.table`, but since the overlap column is a list, it can be a challenge to write the table to a file. The usual `write.table` and `write.csv` functions will struggle with this column unless the user manually transforms the list into a string. Fortunately, `data.table` includes a function `fwrite` to handle such complex structures.
 
 ```{r}
 result.file <- paste(system.file('extdata', package='ActivePathways'), 'example_write.csv', sep='/')
-
+```
+```{r, eval = FALSE}
 data.table::fwrite(res, result.file)
 ```
 
@@ -174,21 +181,20 @@ knitr::kable(read.csv(result.file)[1:3, 1:4], caption = "Write results as csv fi
 ```
 
 # Visualizing the Results in Cytoscape
-The Cytoscape program, combined with the EnrichmentMap app, provides a powerful tool to visualize pathway enrichment analysis as a network. `ActivePathways` can help speed up this process by automatically writing the files that can be uploaded to Cytoscape to create a network. To create these files, a file directory must be supplied to `ActivePathways` using the parameter `cytoscape.file.dir`. If the user plans on reanalyzing the same data with changes to the parameters, the parameter `reanalyze` can be set to `TRUE` and subdirectories of the form `Version1A`, `Version1B`, etc will be created in the `cytoscape.file.dir` to ensure that each version of the analysis is stored. 
+The Cytoscape program, combined with the EnrichmentMap app, provides a powerful tool to visualize pathway enrichment analysis as a network. `ActivePathways` can help speed up this process by automatically writing the files that can be uploaded to Cytoscape to create a network. To create these files, a file directory must be supplied to `ActivePathways` using the parameter `cytoscape.file.dir`. If the user plans on reanalyzing the same data with changes to the parameters, the parameter `reanalyze` can be set to `TRUE`, and subdirectories of the form `Version1A`, `Version1B`, etc. will be created in the `cytoscape.file.dir` to ensure that each version of the analysis is stored. 
 
-```{r}
-
+```{r, eval=FALSE}
 res <- ActivePathways(scores, gmt.file, cytoscape.file.dir = system.file('extdata', package='ActivePathways'))
 ```
 Four files are written:
 
 * `pathways.txt` contains the list of significant pathways and the associated p-values. Note that only terms with `p.val <= significant` are written, even if the option `return.all=TRUE` is specified.
 
-* `subgroups.txt` contains a matrix indicating the columns of the original scores matrix which contributed signficant pathways. A 1 indicates that the pathway is significant if `ActivePathways` is run on the p-values in that column.
+* `subgroups.txt` contains a matrix indicating the columns of the original scores matrix which contributed significant pathways. A 1 indicates that the pathway is significant if `ActivePathways` is run on the p-values in that column.
 
-* `pathways.gmt` contains a shortened version of the supplied GMT file which consists of only the significant pathways. This file can accelerate process of creating the network using Cytoscape.
+* `pathways.gmt` contains a shortened version of the supplied GMT file which consists of only the significant pathways. This file can accelerate the process of creating the network using Cytoscape.
 
-* `legend.pdf` a pdf file of a legend which can be used as reference to the generated Cytoscape network.
+* `legend.pdf` a pdf file of a legend which can be used as a reference to the generated Cytoscape network.
 
 ```{r}
 files <- paste(system.file('extdata', package='ActivePathways'), 
